--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ document.write('  '+todaysDate);
 <body>
 
 <button class="button"><h1><a href="VIDEOS/1 - Copia.html" target="_self">VIDEOS</a></h1></button>
-<button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
+<button class="button"><h1><a href="FILMES/1 - Copia.html" target="_self">FILMES</a></h1></button>
 <button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
 <button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
 <button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
