--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ document.write('  '+todaysDate);
 
 <button class="button"><h1><a href="VIDEOS/1 - Copia.html" target="_self">VIDEOS</a></h1></button>
 <button class="button"><h1><a href="FILMES/1 - Copia.html" target="_self">FILMES</a></h1></button>
-<button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
+<button class="button"><h1><a href="CAM/1 - Copia.html" target="_self">CAM</a></h1></button>
 <button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
 <button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
 <button class="button"><h1><a href="#" target="_self">MESMA ABA</a></h1></button>
