--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@ document.write('  '+todaysDate);
 </head>
 <body>
 
+<!--------------------------------------------------------------------------------------------------->
+<FORM method=GET action=http://search.freefind.com/find.html>
+<INPUT TYPE=HIDDEN NAME=id VALUE=2939488>
+<INPUT TYPE=HIDDEN NAME=pid VALUE=r>
+<INPUT TYPE=HIDDEN NAME=mode VALUE=ALL>
+<INPUT type=HIDDEN name=n value=0>
+<input type=hidden name=lang value=pt>
+<input type=text name=query size=20>
+<input type=submit value=Procurar>
+<!--------------------------------------------------------------------------------------------------->
+
 <button class="button"><h1><a href="VIDEOS/1 - Copia.html" target="_self">VIDEOS</a></h1></button>
 <button class="button"><h1><a href="FILMES/1 - Copia.html" target="_self">FILMES</a></h1></button>
 <button class="button"><h1><a href="CAM/1 - Copia.html" target="_self">CAM</a></h1></button>
